# InterProcess

./: CMakeLists.txt  README.md
NamedMessagePipe/: CMakeLists.txt  version.rc.in
NamedMessagePipe/include/: NamedMessagePipe.h  NamedMessagePipeLibrary.h
NamedMessagePipe/src/: NamedMessagePipe.cpp
examples/: CMakeLists.txt
examples/NamedMessagePipeClient/: CMakeLists.txt  NamedMessagePipeClient.cpp
examples/NamedMessagePipeServer/: CMakeLists.txt  NamedMessagePipeServer.cpp
